apex/objects/Data_Quality_Config__mdt/Data_Quality_Config__mdt.object-meta.xml
<CustomObject>
    <label>Data Quality Config</label>
    <pluralLabel>Data Quality Configs</pluralLabel>
    <description>Configurable thresholds for the scorecard - stale-contact window and the target score line. Edit the Default record's values, don't hardcode thresholds in Apex.</description>
</CustomObject>