apex/objects/Data_Quality_Config__mdt/fields/Channel_Preference_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Preference_Field_Api_Name__c</fullName>
    <label>Channel Preference Field API Name</label>
    <type>Text</type>
    <length>100</length>
    <description>API name of the field this org uses to record a Contact's preferred communication channel (e.g. a custom Preferred_Contact_Method__c picklist). There is no Salesforce-standard field for this, so it has to be told to the scorecard, not guessed. Leave blank and the Channel Preference Coverage metric reports "not configured" instead of a fabricated number.</description>
</CustomField>