apex/objects/Data_Quality_Config__mdt/fields/Required_Fields_To_Check__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_To_Check__c</fullName>
    <label>Required Fields To Check</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated list of Object.Field pairs your org treats as required for a usable donor record, e.g. "Contact.MobilePhone,Contact.Description". "Required" is org-specific, so this is deliberately configurable rather than a fixed list. Defaults to Contact.MobilePhone if left blank.</description>
</CustomField>