apex/objects/Data_Quality_Config__mdt/fields/Stale_Contact_Threshold_Months__c.field-meta.xml
<CustomField>
    <fullName>Stale_Contact_Threshold_Months__c</fullName>
    <label>Stale Contact Threshold (Months)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Months of no Activity/Task and no closed-won gift before a Contact counts as stale. Different org sizes have different normal cadences - this is deliberately configurable, not hardcoded in Apex.</description>
</CustomField>